[styles + feat] Prevent scroll bar jumps + Add custom error catc
*Add marginRight style to switchBodyScroll method of class Modal at Modal.jsx
*Remove width from html tag at index.css
*Add if check to fetch return with throw in case of unsuccess to fetchImages method of class App at App.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow-y: scroll;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: #212121;
@@ -16,7 +17,7 @@ code {
 /* common styles */
 html {
   box-sizing: border-box;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 *,
